fix(TextAndMedia): fix text wrap to prevent the text from entering the picture

--- a/src/components/globals/TextAndMedia/TextAndMedia.scss
+++ b/src/components/globals/TextAndMedia/TextAndMedia.scss
@@ -65,10 +65,7 @@
     margin-bottom: 12px;
     white-space: pre;
     color: $color-black-75;
-
-    @include tablet {
-      max-width: 95%;
-    }
+    text-wrap: auto;
 
     @include tablet-xl {
       margin-bottom: 16px;
